--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=3306
 DB_USER=nest_user
 DB_PASSWORD=VH520Avril
 DB_DATABASE=blog
 
-SECRET=prod123456
+SECRET=docker123456
+DB_MIGRATIONS_RUN=true
