feat: update environment configuration and enhance user creation validation

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=db
+DB_HOST=mysql-main.c56q0ay8skge.ap-southeast-2.rds.amazonaws.com
 DB_PORT=3306
 DB_USER=nest_user
 DB_PASSWORD=VH520Avril
