--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: nest-project-api
+    container_name: nest-project-api-vpc
     restart: always
     env_file:
       - .env                                  # 让 Nest 读这里的环境变量
