feat: update database configuration and enhance user password validation

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=mysql-main.c56q0ay8skge.ap-southeast-2.rds.amazonaws.com
+DB_HOST=nest-mysql-nz.mysql.database.azure.com
 DB_PORT=3306
-DB_USER=nest_user
+DB_USER=nest_user@nest-mysql-nz
 DB_PASSWORD=VH520Avril
 DB_DATABASE=blog
 
